chore(ci): add sonar analysis

--- a/apps/curriculum-vitae/src/app/app.component.html
+++ b/apps/curriculum-vitae/src/app/app.component.html
@@ -5,6 +5,6 @@
       [experience]="experience"
     ></cv-experience>
   </div>
-  <div template-sidebar>Sidebar</div>
+  <div template-sidebar><img class="portrait" src="/assets/Portrait2015Carre.jpg" alt="Logo"></div>
   <div template-footer>Made with ♡ by Jeko</div>
 </cv-template-ui>
