--- a/libs/template-ui/src/lib/template-ui.component.scss
+++ b/libs/template-ui/src/lib/template-ui.component.scss
@@ -2,13 +2,11 @@
   .container {
     height: 100vh;
     display: grid;
-    grid-template-rows: 64px 1fr 130px;
-    grid-template-columns: 150px 1fr;
-    grid-gap: 16px;
+    //grid-template-rows: 64px 1fr 130px;
+    grid-template-columns: 300px 1fr;
+    //grid-gap: 16px;
     grid-template-areas:
-      "head head"
       "sidebar main"
-      "foot foot";
   }
 }
 
@@ -25,10 +23,15 @@
 
 .sidebar {
   grid-area: sidebar;
+  align-items: center;
+  text-align: center;
+  background-color: rgb(46, 43, 61);
+  padding: 16px;
 }
 
 .content {
   grid-area: main;
+  padding: 16px;
 }
 
 .footer {
