--- a/libs/template-ui/src/lib/template-ui.component.scss
+++ b/libs/template-ui/src/lib/template-ui.component.scss
@@ -5,8 +5,7 @@
     //grid-template-rows: 64px 1fr 130px;
     grid-template-columns: 300px 1fr;
     //grid-gap: 16px;
-    grid-template-areas:
-      "sidebar main"
+    grid-template-areas: "sidebar main";
   }
 }
 
