--- a/apps/curriculum-vitae/src/app/home/home.component.scss
+++ b/apps/curriculum-vitae/src/app/home/home.component.scss
@@ -1,15 +1,28 @@
+@import "variables";
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   height: 100vh;
+  opacity: 0;
 
   .title {
     font-size: 1.3em;
   }
 
   .subtitle {
+    color: $light-color-secondary;
+  }
+
+  .link {
+    font-size: 0.8em;
+    padding: 16px;
+  }
+
+  img {
+    height: 200px;
+    border-radius: 50%;
   }
 }
