fix(*): fix styles

--- a/apps/curriculum-vitae/src/app/experiences/experiences.component.html
+++ b/apps/curriculum-vitae/src/app/experiences/experiences.component.html
@@ -5,8 +5,8 @@
       [experience]="experience"
     ></cv-experience>
   </div>
-  <div template-sidebar>
-    <img class="portrait" src="/assets/Portrait2015Carre.jpg" alt="Logo" />
+  <div template-header class="portrait">
+    <img src="/assets/Portrait2015Carre.jpg" alt="Logo" />
   </div>
-  <div template-footer>Made with ♡ by Jeko</div>
+  <div template-footer>Made with ♡ by Cédric Moulard</div>
 </cv-template-ui>
