--- a/apps/curriculum-vitae/src/app/experiences/experiences.component.scss
+++ b/apps/curriculum-vitae/src/app/experiences/experiences.component.scss
@@ -1,4 +1,8 @@
-img {
-  height: 200px;
-  border-radius: 50%;
+.portrait {
+  padding-right: 16px;
+
+  img {
+    height: 128px-32px;
+    border-radius: 50%;
+  }
 }
