--- a/apps/curriculum-vitae/src/app/home/home.component.html
+++ b/apps/curriculum-vitae/src/app/home/home.component.html
@@ -1,12 +1,14 @@
 <div [@titleAnimation]="'true'" class="container">
-  <div>
-    <img class="portrait" src="/assets/Portrait2015Carre.jpg" alt="Logo" />
+  <div class="portrait">
+    <img src="/assets/Portrait2015Carre.jpg" alt="Logo" />
   </div>
   <div class="title">
     {{ title }}
   </div>
   <div class="subtitle">{{ subtitle }}</div>
   <div class="link">
-    <a [routerLink]="['/experiences']">En savoir (beaucoup) plus..</a>.
+    <button mat-stroked-button (click)="goToExperiences()">
+      En savoir (beaucoup) plus
+    </button>
   </div>
 </div>
