--- a/apps/curriculum-vitae/src/app/home/home.component.scss
+++ b/apps/curriculum-vitae/src/app/home/home.component.scss
@@ -8,21 +8,27 @@
   height: 100vh;
   opacity: 0;
 
+  .portrait {
+    padding: 32px;
+  }
+
   .title {
-    font-size: 1.3em;
+    font-size: 1.4rem;
+    font-weight: 500;
   }
 
   .subtitle {
+    font-size: 0.9rem;
     color: $light-color-secondary;
   }
 
   .link {
-    font-size: 0.8em;
-    padding: 16px;
+    font-size: 0.8rem;
+    padding: 32px;
   }
 
   img {
-    height: 200px;
+    height: 150px;
     border-radius: 50%;
   }
 }
