--- a/apps/curriculum-vitae/src/styles.scss
+++ b/apps/curriculum-vitae/src/styles.scss
@@ -2,7 +2,6 @@
 @import "styles/variables";
 
 body {
-  font-size: 1.2em;
   background-color: $light-background;
   color: $light-color;
   font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Roboto",
@@ -16,9 +15,5 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  margin: 0;
 }
