--- a/libs/template-ui/src/lib/template-ui.component.html
+++ b/libs/template-ui/src/lib/template-ui.component.html
@@ -1,8 +1,11 @@
 <div class="container">
-  <div class="sidebar">
-    <ng-content select="[template-sidebar]"></ng-content>
+  <div class="header">
+    <ng-content select="[template-header]"></ng-content>
   </div>
   <div class="content">
     <ng-content select="[template-content]"></ng-content>
+  </div>
+  <div class="footer">
+    <ng-content select="[template-footer]"></ng-content>
   </div>
 </div>
