feat(experiences): externalize resources

--- a/apps/curriculum-vitae/src/app/experiences/experiences.component.html
+++ b/apps/curriculum-vitae/src/app/experiences/experiences.component.html
@@ -6,7 +6,7 @@
     ></cv-experience>
   </div>
   <div template-header class="portrait">
-    <img src="/assets/Portrait2015Carre.jpg" alt="Logo" />
+    <img [src]="avatarUrl" alt="Logo" />
   </div>
   <div template-footer>Made with ♡ by Cédric Moulard</div>
 </cv-template-ui>
