--- a/apps/curriculum-vitae/src/app/home/home.component.html
+++ b/apps/curriculum-vitae/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div [@titleAnimation]="'true'" class="container">
   <div class="portrait">
-    <img src="/assets/Portrait2015Carre.jpg" alt="Logo" />
+    <img [src]="avatarUrl" alt="Logo" />
   </div>
   <div class="title">
     {{ title }}
