--- a/apps/curriculum-vitae/src/app/experiences/experiences.component.html
+++ b/apps/curriculum-vitae/src/app/experiences/experiences.component.html
@@ -1,7 +1,7 @@
 <cv-template-ui [title]="title">
   <div template-content>
     <cv-experience
-      *ngFor="let experience of (experiences$ | async)"
+      *ngFor="let experience of experiences$ | async"
       [experience]="experience"
     ></cv-experience>
   </div>
