--- a/apps/curriculum-vitae/src/styles/_variables.scss
+++ b/apps/curriculum-vitae/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $light-border-color: #dcdcdc;
 /* dark theme colors */
 $dark-background: #292a2d;
 $dark-background-secondary: #3b3d42;
+$dark-accent: rgb(175, 76, 82);
 $dark-color: #a9a9b3;
 $dark-color-secondary: #73747b;
 $dark-border-color: #4a4b50;
